Resetting a SELECT with no default selection should only jump to the first option if it's a single-row list.

BUG: 133326

svn path=/branches/KDE/3.5/kdelibs/; revision=579594